<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add_circle_48pt"
        android:title="@string/title_addPackage"/>

    <item
        android:id="@+id/navigation_viewTrolly"
        android:icon="@drawable/ic_trolly_black_24dp"
        android:title="@string/title_viewTrolly"/>

    <item
        android:id="@+id/navigation_aboutMe"
        android:icon="@drawable/ic_face_black_24dp"
        android:title="@string/title_about"/>

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_36pt_2x"
        android:title="@string/title_search"/>

    <item
        android:id="@+id/navigation_pastTransactions"
        android:icon="@drawable/ic_history_black_36dp"
        android:title="@string/title_myTransactions"/>

</menu>
